# shinkai

./: .gitignore  Makefile  README.md  pyproject.toml
data/: deepseek.swift.dataset-100.json  deepseek.swift.dataset-100.swift  swift.class.first.dataset.swift  swift.class.second.dataset.swift  swift.dataset-100.swift  swift.dataset-1102.swift  swift.function.dataset.swift  test-dataset.swift
karudo/: __init__.py  __main__.py
metrics/HuggingFaceTB/: SmolLM2-1.7B-2025-05-12T13:54:55.json  SmolLM2-1.7B-2025-05-18T18:01:11.json  SmolLM2-1.7B-2025-05-18T19:09:29.json  SmolLM2-1.7B-lora-2025-05-18T23:34:43.json  SmolLM2-1.7B-lora-2025-05-18T23:58:26.json  SmolLM2-1.7B-lora-2025-05-19T13:47:57.json  SmolLM2-1.7B-lora-2025-05-19T16:58:14.json  SmolLM2-1.7B-sft-2025-05-18T23:52:55.json  SmolLM2-1.7B-sft-2025-05-18T23:56:07.json  SmolLM2-1.7B-sft-2025-05-19T05:34:23.json
metrics/Qwen/: Qwen3-1.7B-2025-05-11 19:56:02.980251.json  Qwen3-1.7B-2025-05-11 19:59:12.371218.json  Qwen3-1.7B-2025-05-11 20:04:13.968269.json  Qwen3-1.7B-2025-05-11 21:39:45.848818.json  Qwen3-1.7B-2025-05-11 21:47:59.872511.json  Qwen3-1.7B-2025-05-11 22:28:01.170961.json  Qwen3-1.7B-2025-05-11 22:30:38.874626.json  Qwen3-1.7B-2025-05-11 23:09:31.348592.json  Qwen3-1.7B-2025-05-11 23:19:30.876522.json  Qwen3-1.7B-2025-05-11 23:37:52.994575.json  Qwen3-1.7B-2025-05-11 23:40:31.586406.json  Qwen3-1.7B-2025-05-11 23:48:37.799260.json  Qwen3-1.7B-2025-05-11T23:53:17.json  Qwen3-1.7B-2025-05-11T23:55:11.json  Qwen3-1.7B-2025-05-11T23:56:07.json  Qwen3-1.7B-2025-05-12T00:28:47.json  Qwen3-1.7B-lora-2025-05-18T23:48:32.json  Qwen3-1.7B-lora-2025-05-19T02:14:50.json  Qwen3-1.7B-metrics.json  Qwen3-1.7B-prefix-2025-05-19T17:37:30.json  Qwen3-1.7B-sft-2025-05-18T14:57:41.json  Qwen3-1.7B-sft-2025-05-18T16:44:39.json
metrics/deepseek-ai/: deepseek-coder-1.3b-base-lora-2025-05-19T13:37:55.json  deepseek-coder-1.3b-base-lora-2025-05-19T13:42:18.json  deepseek-coder-1.3b-base-lora-2025-05-19T14:39:55.json  deepseek-coder-1.3b-base-metrics.json  (+2 more)
notebooks/: dataset.ipynb  playground.ipynb  qwen.ipynb  sft.ipynb
scripts/: cli.py
shinkai/: __init__.py  __main__.py  constants.py
(+24 files in other folders)
