[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "karudo"
version = "0.1.0"
description = ""
authors = [
    {name = "nschpy",email = "nschpy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "typer (>=0.15.3,<0.16.0)"
]

[project.scripts]
karudo-cli = "scripts.cli:app"